fix calculator alignmentand LinkedIn icon on the footer

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     border: 4px solid #fff;
     border-radius: 8px;
     background-color: #fff;
